# ev-simulator

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLANNING.md  README.md  app.py  pyproject.toml
data/input/: ev_driver_archetypes.csv  prices_apx_2025.csv
ev_simulator/: constants.py
ev_simulator/dashboard/: charts.py  compute.py
ev_simulator/models/: __init__.py  archetype.py  user.py
ev_simulator/simulation/: __init__.py  simulator.py  verifier.py
notebooks/: validation.ipynb
scripts/: fetch_prices.py
tests/: test_simulation.py
