[tool.poetry]
name = "ev-simulator"
version = "0.1.0"
description = "EV user simulation and flexibility dashboard"
authors = ["Sarah Inman <beeb.inman@gmail.com>"]
readme = "README.md"
packages = [{include = "ev_simulator"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0"
polars = "^1.0"
streamlit = "^1.35"
requests = "^2.32"
plotly = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
jupyter = "^1.1"
ipykernel = "^6.29"
matplotlib = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
